--- a/src/Makefile.include
+++ b/src/Makefile.include
@@ -159,8 +159,10 @@ ifeq ("$(OSTYPE_MACHINE)","Linux_x86_64")
     CFLAGS = -g
 endif
 
-FFLAGS = -g
-CFLAGS = -g
+#FFLAGS = -g
+#CFLAGS = -g
+FFLAGS = -O2
+CFLAGS = -O2
 
     FC = g77
 
