--- a/src/rol/Makefile
+++ b/src/rol/Makefile
@@ -30,9 +30,9 @@ $(LIB_FILES_ROL): $(SOURCE_FILES_ROL) ./$(OSTYPE_MACHINE)/rol/hps1_master.so \
 	./$(OSTYPE_MACHINE)/rol/svt1_slave.so \
 	./$(OSTYPE_MACHINE)/rol/fadc1_master.so \
 	./$(OSTYPE_MACHINE)/rol/fadc1_slave.so \
-	./$(OSTYPE_MACHINE)/rol/fadc1_1182.so \
-	./$(OSTYPE_MACHINE)/rol/urol2_tt_testsetup.so 
+	./$(OSTYPE_MACHINE)/rol/fadc1_1182.so
 
+#	./$(OSTYPE_MACHINE)/rol/urol2_tt_testsetup.so \
 #	./$(OSTYPE_MACHINE)/rol/dcrb1_master.so \
 #	./$(OSTYPE_MACHINE)/rol/dcrb1_slave.so \
 
@@ -89,9 +89,9 @@ $(LIB_FILES_ROL): $(SOURCE_FILES_ROL) ./$(OSTYPE_MACHINE)/rol/hps1_master.so \
 	$(MKROLDIR)
 	$(CC) -DTI_SLAVE $(CCROLOPT)
 
-./$(OSTYPE_MACHINE)/rol/urol2_tt_testsetup.o : rols/urol2_tt.c
-	$(MKROLDIR)
-	$(CC) -DTEST_SETUP $(CCROLOPT)
+#./$(OSTYPE_MACHINE)/rol/urol2_tt_testsetup.o : rols/urol2_tt.c
+#	$(MKROLDIR)
+#	$(CC) -DTEST_SETUP $(CCROLOPT)
 
 #endif
 
@@ -105,7 +105,8 @@ $(LIB_FILES_ROL): $(SOURCE_FILES_ROL) ./$(OSTYPE_MACHINE)/rol/hps1_master.so \
 LDCC = $(LDCXX)
 LDFC = $(LDCXX)
 
-CLON_FLAGS += -I./inc -I./code.s -I./mvt.s -I../codatt/codatt.s/ -I$(CODA)/common/include
+######CLON_FLAGS += -I./inc -I./code.s -I./mvt.s -I../codatt/codatt.s/ -I$(CODA)/common/include
+CLON_FLAGS += -I./inc -I./code.s -I./mvt.s -I$(CODA)/common/include
 
 
 ifeq ("$(OSTYPE)","Linux")
@@ -123,8 +124,8 @@ else ifeq ("$(OSTYPE_MACHINE)","Linux_nios2")
   CLON_FLAGS += -I$(CODA)/Linux_nios2/include
   LIBNAMES +=
 else
-  LIBNAMES += $(CODA)/src/codatt/$(OSTYPE_MACHINE)/lib/libcodatt.a
-  LIBNAMES += $(CODA)/src/bosio/$(OSTYPE_MACHINE)/lib/libbosio.a
+##########  LIBNAMES += $(CODA)/src/codatt/$(OSTYPE_MACHINE)/lib/libcodatt.a
+##########  LIBNAMES += $(CODA)/src/bosio/$(OSTYPE_MACHINE)/lib/libbosio.a
   LIBNAMES += $(CODA)/src/mysql4.1.20/$(OSTYPE_MACHINE)/lib/libmysql4.1.20.a
 
   LIBNAMES += -lpthread
@@ -133,13 +134,13 @@ ifeq ("$(OSTYPE_MACHINE)","Linux_i686_vme")
 
   LIBNAMES += $(CODA)/src/rol/jvme/libjvme.so
 
-# smartsocket stuff
-  CLON_FLAGS +=	-I$(CLON)/common/include
-  CLON_FLAGS += -I$(RTHOME)/include
-  LIBNAMES += $(CLON)/Linux_i686/lib/libepicsutil.a
-  LIBNAMES += $(CLON)/Linux_i686/lib/libipc.a
-  LIBNAMES += -L$(RTHOME)/lib/$(OSTYPE_MACHINE) -lrtipc -lrtipcl -lrtutil -lrtcxxipc50
-# smartsocket stuff
+## smartsocket stuff
+#  CLON_FLAGS +=	-I$(CLON)/common/include
+#  CLON_FLAGS += -I$(RTHOME)/include
+#  LIBNAMES += $(CLON)/Linux_i686/lib/libepicsutil.a
+#  LIBNAMES += $(CLON)/Linux_i686/lib/libipc.a
+#  LIBNAMES += -L$(RTHOME)/lib/$(OSTYPE_MACHINE) -lrtipc -lrtipcl -lrtutil -lrtcxxipc50
+## smartsocket stuff
 
 endif
 
