--- a/src/trigger/Makefile
+++ b/src/trigger/Makefile
@@ -29,7 +29,7 @@ CLON_FLAGS += -I./src.s -I$(CODA)/common/include
 ifneq ("$(OSTYPE)","VXWORKS")
   LIBNAMES += $(CODA)/$(OSTYPE_MACHINE)/lib/librol.a
   LIBNAMES += $(CODA)/$(OSTYPE_MACHINE)/lib/libmysql4.1.20.a
-  LIBNAMES += $(CODA)/src/rol/jvme/libjvme.so
+#####  LIBNAMES += $(CODA)/src/rol/jvme/libjvme.so
 
   LIBNAMES += $(ROOTGLIBS)
 #  LIBNAMES += $(SYSLIBS)
