after prad run and small fixes

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,8 @@ src/rol/jvme_old/
 src/rol/rols/FB_PRAD
 src/rol/rols/VME_PRAD
 src/rol_after_hps/
+src/rol/main.2016june11/
+src/rol/main_mandjavi/
+src/rol/mvt.s.2016june11/
+src/rol/rols.2016june11/
+src/rol/rols_mandjavi/
