add c111c, ipc, some fixes

--- a/.gitignore
+++ b/.gitignore
@@ -40,4 +40,6 @@ src/rol/rols.2016june11/
 src/rol/rols_mandjavi/
 src/rol/gotratest/
 src/rol/camac.s/
+src/rol/Camac_c111c/
+src/rol/compensation_tables/
 src/vtp/
