add ipc and codautil from clon area, sis/scaler1

--- a/src/ipc/Makefile
+++ b/src/ipc/Makefile
@@ -22,8 +22,7 @@ include $(CODA)/src/Makefile.include
 #RCDB
 CLON_FLAGS += -std=c++11 -DRCDB_MYSQL -I/usr/include/mysql -I$(RCDB_HOME)/cpp/include
 
-CLON_FLAGS += -I./$(MAIN).s -I$(CODA)/common/include -I$(CODA)/common/include \
-				-I$(IPC_HOME)/src/main
+CLON_FLAGS += -I./$(MAIN).s -I$(CODA)/common/include -I$(CODA)/common/include -I$(IPC_HOME)/src/main
 
 ifeq ("$(OSTYPE_MACHINE)","Linux_i686")
   CLON_FLAGS += -I/usr/local/include/apr-1
@@ -33,7 +32,6 @@ else
   CLON_FLAGS += -I/usr/include/apr-1
 endif
 
-##LIBNAMES += $(CLON)/$(OSTYPE_MACHINE)/lib/libclonutil.a
 LIBNAMES += $(CODA)/$(OSTYPE_MACHINE)/lib/libmysql4.1.20.a
 LIBNAMES += $(CODA)/$(OSTYPE_MACHINE)/lib/libet.a
 LIBNAMES += $(CODA)/$(OSTYPE_MACHINE)/lib/libevio.a
@@ -71,7 +69,7 @@ LIBNAMES += $(SYSLIBS)
 #-------------------
 # customize targets
 #-------------------
-install: install_lib install_bin install_java
+install: install_lib install_bin
 	rm -rf tmp
 	mkdir tmp
 	cp $(MAIN).s/*.h tmp
